test/Harper/Tests/Bad/issue025_invCtorSig2.har
ref RefBox a = {
    data = {
        a :: a;
    }

    ctor :: a -> RefBox a;
    ctor a = {
        this.data.a := a;
    };

    get :: impure -> a;
    get = this.data.a;

    set :: a -> impure -> ();
    set a = {
        this.data.a := a;
    };
};

main :: Integer;
main = {
    (b :: RefBox Integer) = RefBox.ctor 42 ();
    return b.get ();
};