test/Harper/Tests/Bad/issue025_invCtorSig2.out
Error: constructor of `RefBox` has an invalid signature `a -> RefBox a`. Constructors must be impure functions returning an instance of the type.
During evaluation of:
  ctor :: a -> RefBox a
Located at line 6 column 4

Execution terminated with an error: type error.